Fix MacOS titleBar bug
Bug: MacOS traffic light overlaps with server selection menu.

--- a/src/renderer/mainWindow/titleBarView/titleBar.module.css
+++ b/src/renderer/mainWindow/titleBarView/titleBar.module.css
@@ -226,3 +226,8 @@
     color: red;
   }
 }
+
+.titleBarMac .serverChooser {
+  position: relativ;
+  left: 70px;
+}
